<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Planets</string>
    <string name="diameter">Diameter</string>
    <string name="earth">Earth</string>
    <string name="earth_diameter">12,756.3 km</string>
    <string name="earth_mass">5.972e24 kg</string>
    <string name="earth_orbit">149,600,000 km (1.00 AU)</string>
    <string name="earth_trivia">supports life</string>
    <string name="jupiter">Jupiter</string>
    <string name="jupiter_diameter">142,984 km</string>
    <string name="jupiter_mass">1.900e27 kg</string>
    <string name="jupiter_orbit">778,330,000 km (5.20 AU)</string>
    <string name="jupiter_trivia">largest planet</string>
    <string name="mars">Mars</string>
    <string name="mars_diameter">6,794 km</string>
    <string name="mars_mass">6.4219e23 kg</string>
    <string name="mars_orbit">227,940,000 km (1.52 AU)</string>
    <string name="mars_trivia">the red planet, tallest volcanoes</string>
    <string name="mass">Mass</string>
    <string name="mercury">Mercury</string>
    <string name="mercury_diameter">4,880 km</string>
    <string name="mercury_mass">3.30e23 kg</string>
    <string name="mercury_orbit">57,910,000 km (0.38 AU)</string>
    <string name="mercury_trivia">closest to Sun</string>
    <string name="neptune">Neptune</string>
    <string name="neptune_diameter">49,532 km</string>
    <string name="neptune_mass">1.0247e26 kg</string>
    <string name="neptune_orbit">4,504,000,000 km (30.06 AU)</string>
    <string name="neptune_trivia">farthest from Sun</string>
    <string name="orbit">Orbit</string>
    <string name="saturn">Saturn</string>
    <string name="saturn_diameter">120,536 km</string>
    <string name="saturn_mass">5.68e26 kg</string>
    <string name="saturn_orbit">1,429,400,000 km (9.54 AU)</string>
    <string name="saturn_trivia">most visible rings</string>
    <string name="trivia">Trivia</string>
    <string name="uranus">Uranus</string>
    <string name="uranus_diameter">51,118 km</string>
    <string name="uranus_mass">8.683e25 kg</string>
    <string name="uranus_orbit">2,870,990,000 km (19.218 AU)</string>
    <string name="uranus_trivia">seventh from Sun</string>
    <string name="venus">Venus</string>
    <string name="venus_diameter">12,103.6 km</string>
    <string name="venus_mass">4.869e24 kg</string>
    <string name="venus_orbit">108,200,000 km (0.72 AU)</string>
    <string name="venus_trivia">most circular orbit</string>
</resources>
