<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">
   <Button android:layout_height="wrap_content"
           android:layout_weight="1"
           android:layout_width="fill_parent"
           android:onClick="doBtnClicked"
           android:tag="mercury"
           android:text="@string/mercury"/>
   <Button android:layout_height="wrap_content"
           android:layout_weight="1"
           android:layout_width="fill_parent"
           android:onClick="doBtnClicked"
           android:tag="venus"
           android:text="@string/venus"/>
   <Button android:layout_height="wrap_content"
           android:layout_weight="1"
           android:layout_width="fill_parent"
           android:onClick="doBtnClicked"
           android:tag="earth"
           android:text="@string/earth"/>
   <Button android:layout_height="wrap_content"
           android:layout_weight="1"
           android:layout_width="fill_parent"
           android:onClick="doBtnClicked"
           android:tag="mars"
           android:text="@string/mars"/>
   <Button android:layout_height="wrap_content"
           android:layout_weight="1"
           android:layout_width="fill_parent"
           android:onClick="doBtnClicked"
           android:tag="jupiter"
           android:text="@string/jupiter"/>
   <Button android:layout_height="wrap_content"
           android:layout_weight="1"
           android:layout_width="fill_parent"
           android:onClick="doBtnClicked"
           android:tag="saturn"
           android:text="@string/saturn"/>
   <Button android:layout_height="wrap_content"
           android:layout_weight="1"
           android:layout_width="fill_parent"
           android:onClick="doBtnClicked"
           android:tag="uranus"
           android:text="@string/uranus"/>
   <Button android:layout_height="wrap_content"
           android:layout_weight="1"
           android:layout_width="fill_parent"
           android:onClick="doBtnClicked"
           android:tag="neptune"
           android:text="@string/neptune"/>
</LinearLayout>